--- a/ShareLockRevamp/Resources/layout/EditDoorLock.xml
+++ b/ShareLockRevamp/Resources/layout/EditDoorLock.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:minWidth="350dp"
+ 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -44,11 +43,30 @@
         
         android:hint="Enter Family/Owner Name"
         android:id="@+id/familyOwner"/>
-    <Button
-        android:text="Save Changes"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"
+        android:id="@+id/linearLayout1" >
+        <Button
+        android:text="Save Changes"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        
+        android:layout_marginRight="10dp"
+        android:background="@drawable/myroundedcorners"
         android:id="@+id/EditDoorLockButton" />
+        <Button
+        android:text="Delete"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/myroundedcorners"
+        android:id="@+id/DeleteDoorLockButton" />
+    </LinearLayout>
+
+    
 </LinearLayout>
