--- a/ShareLockRevamp/Resources/layout/activity_main.xml
+++ b/ShareLockRevamp/Resources/layout/activity_main.xml
@@ -38,6 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:id="@+id/HomeLayout">
         <include
         android:layout_width="wrap_content"
@@ -46,6 +47,21 @@
         android:layout_marginBottom="70dp"
         android:id="@+id/HomeInclude"
             layout="@layout/HomePage"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        
+        android:id="@+id/EditDoorLayout">
+        <include
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp"
+        android:id="@+id/EditDoorLookInclude"
+            layout="@layout/EditDoorLock"/>
 
     </LinearLayout>
     
