--- a/ShareLockRevamp/Resources/layout/VisitsPage.xml
+++ b/ShareLockRevamp/Resources/layout/VisitsPage.xml
@@ -4,49 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/linearLayout6" >
-            
-            <TextView
-                android:text="Saved Homes:"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView4" />
-         
-			<ImageView
-				android:src="@android:drawable/ic_menu_gallery"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:layout_alignParentRight="true"
-				android:id="@+id/addSavedHome"
-				    />
-        
-    </RelativeLayout>
-    
    
-        <androidx.recyclerview.widget.RecyclerView
-        android:minWidth="100dp"
-        android:minHeight="140dp"
-        android:paddingLeft="10dp"
-        android:scrollbarAlwaysDrawHorizontalTrack="true"
-        android:background="#e2e2e2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/familyMembersRecyclerView"
-        android:scrollbars="horizontal"
-        android:layout_marginBottom="20dp"
-       />
-    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/linearLayout7" >
             
             <TextView
-                android:text="Visitor Requests:"
+                android:text="Your Requests"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -69,7 +34,7 @@
         android:background="#e2e2e2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/visitorRequestRecyclerView"
+        android:id="@+id/yourRequestRecyclerView"
         android:scrollbars="horizontal"
         android:layout_marginBottom="20dp"
        />
