--- a/ShareLockRevamp/Resources/layout/activity_main.xml
+++ b/ShareLockRevamp/Resources/layout/activity_main.xml
@@ -53,7 +53,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        
+        android:visibility="gone"
         android:id="@+id/EditDoorLayout">
         <include
         android:layout_width="match_parent"
@@ -62,6 +62,20 @@
         android:layout_marginBottom="70dp"
         android:id="@+id/EditDoorLookInclude"
             layout="@layout/EditDoorLock"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        
+        android:id="@+id/YourVisitsLayout">
+        <include
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp"
+        android:id="@+id/EditDoorLookInclude"
+            layout="@layout/VisitsPage"/>
 
     </LinearLayout>
     
