--- a/ShareLockRevamp/Resources/layout/activity_main.xml
+++ b/ShareLockRevamp/Resources/layout/activity_main.xml
@@ -1,93 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <androidx.appcompat.widget.Toolbar
+        android:background="@drawable/roundedcornerwhite"
+        android:layout_width="match_parent"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:id="@+id/toolbar1">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/relativeLayout1">
+            <ImageView
+                    android:src="@drawable/logo"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:id="@+id/logo" />
+                <TextView
+                    android:text="SaveLocks"
+                    android:gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_centerInParent="true"
+                    android:textStyle="bold"
+                    android:textSize="23dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/usernameTxt" />
+                <ImageView
+                android:src="@drawable/profilelogo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:id="@+id/profileBtn" />
+                
 
-    ///Header
-    <RelativeLayout
+        </RelativeLayout>
+        
+
+    </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/headerLayout">
-		<TextView
-            android:text="Home"
-            android:textSize="35sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/message" />
-
-		<ImageView
-            android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:id="@+id/profile" />
-		<ImageView
-            android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_toLeftOf="@+id/profile"
-            android:id="@+id/notification" />
-
-	</RelativeLayout>
-   
-    ///HomePage
+        
+        android:id="@+id/homeLayout">
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/homelayout"/>
+    </LinearLayout>
     <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:id="@+id/HomeLayout">
+        android:id="@+id/profileLayout">
         <include
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
-        android:id="@+id/HomeInclude"
-            layout="@layout/HomePage"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/profilelayout"/>
     </LinearLayout>
-
     <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:visibility="gone"
         android:id="@+id/EditDoorLayout">
         <include
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
-        android:id="@+id/EditDoorLookInclude"
-            layout="@layout/EditDoorLock"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        
-        android:id="@+id/YourVisitsLayout">
-        <include
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
-        android:id="@+id/EditDoorLookInclude"
-            layout="@layout/VisitsPage"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/editdoorlock"/>
     </LinearLayout>
     
+    
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/navigation" />
 
-</RelativeLayout>
+
+</LinearLayout>
