--- a/ShareLockRevamp/Resources/layout/LoginLayout.xml
+++ b/ShareLockRevamp/Resources/layout/LoginLayout.xml
@@ -11,15 +11,17 @@
         android:gravity="center"
         android:id="@+id/linearLayout1" >
         <ImageView
-            android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:src="@drawable/logo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center"
             android:id="@+id/logoImage" />
         <TextView
             android:text="ShareLock"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="#38A3DC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -32,6 +34,7 @@
         android:text="Welcome Back!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#38A3DC"
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:textStyle="bold"
@@ -42,6 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
         android:id="@+id/usernameTxt"
         android:hint="Username"/>
     
@@ -49,7 +54,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
+        android:inputType="textPassword"
        android:id="@+id/passwordTxt"
         android:hint="Password"/>
     <Button
@@ -59,7 +66,8 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:background="@drawable/myroundedcorners"
+        android:textColor="@android:color/white"
+        android:background="@drawable/accentedbutton"
         android:id="@+id/loginBtn" />
     <RelativeLayout
         android:orientation="horizontal"
