--- a/ShareLockRevamp/Resources/layout/SignUpLayout.xml
+++ b/ShareLockRevamp/Resources/layout/SignUpLayout.xml
@@ -40,18 +40,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
         android:id="@+id/fullnameTxt"
         android:hint="FullName"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
         android:id="@+id/usernameTxt"
         android:hint="Username"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
         android:id="@+id/emailText"
         android:hint="Email Address"/>
     <EditText
@@ -59,6 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:inputType="textPassword"
+        android:textColorHint="#38A3DC"
+        android:backgroundTint="#38A3DC"
+        
         android:id="@+id/passwordTxt"
         android:hint="Password"/>
     <Button
