With Splash Screen

--- a/ShareLockRevamp/Resources/layout/SignUpLayout.xml
+++ b/ShareLockRevamp/Resources/layout/SignUpLayout.xml
@@ -11,26 +11,30 @@
         android:gravity="center"
         android:id="@+id/linearLayout1" >
         <ImageView
-            android:src="@android:drawable/ic_menu_gallery"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:src="@drawable/logo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center"
             android:id="@+id/logoImage" />
         <TextView
-            android:text="ShareLock" 
+            android:text="ShareLock"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="#38A3DC"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:id="@+id/textView1" />
 
+
     </LinearLayout>
     <TextView
         android:text="Create An Account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#38A3DC"
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:textStyle="bold"
@@ -76,8 +80,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:textColor="@android:color/white"
         android:gravity="center"
-        android:background="@drawable/myroundedcorners"
+        android:background="@drawable/accentedbutton"
         android:id="@+id/signupBtn" />
     <RelativeLayout
         android:orientation="horizontal"
