--- a/ShareLockRevamp/Resources/layout/SignUpLayout.xml
+++ b/ShareLockRevamp/Resources/layout/SignUpLayout.xml
@@ -62,6 +62,8 @@
         android:layout_marginTop="15dp"
         android:textColorHint="#38A3DC"
         android:backgroundTint="#38A3DC"
+        
+        android:inputType="textEmailAddress"
         android:id="@+id/emailText"
         android:hint="Email Address"/>
     <EditText
